refactored to utilized speedtest gem, way easier than building own speedtest'

--- a/app/views/speedtest/index.html.erb
+++ b/app/views/speedtest/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Speed Test</h1>
+<div class="loader">Loading...</div>
 <button id='speedtest-perform'>Perform</button>
 <%= javascript_pack_tag 'speedtest' %>
